--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -5,50 +6,408 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>I Never Want You To Leave</title>
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Google Fonts (all the ones you specified) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Cormorant:ital,wght@0,300..700;1,300..700&family=Amatic+SC:wght@400;700&family=M+PLUS+Rounded+1c:wght@100;300&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
+    <!-- HERO -->
     <header class="hero">
       <div class="hero-inner">
-        <h1>I never want you to leave.</h1>
-        <p class="sub">
-          A small page, for a very big feeling.
-        </p>
+        <h1 class="site-title">I never want you to leave.</h1>
+        <p class="site-subtitle">I never knew love until I met you</p>
       </div>
     </header>
 
     <main class="page">
-      <!-- SECTION 1 -->
-      <section class="block">
-        <img class="photo" src="images/photo1.jpg" alt="A warm memory" />
+      <!-- SECTION 2: The Sense of Life -->
+      <section class="block" id="sense-of-life">
+        <div class="embed-wrap">
+          <iframe
+            allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write"
+            frameborder="0"
+            height="175"
+            style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;"
+            sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
+            src="https://embed.music.apple.com/us/song/just-the-two-of-us-feat-bill-withers/310527535"
+          ></iframe>
+        </div>
 
-        <div class="text">
-          <h2>Somewhere safe</h2>
-          <p>
-            There are days when the world feels too loud.
-            But when I think of you, it gets quieter.
-            Like the universe lowering its voice out of respect.
+        <img
+          class="photo"
+          src="https://i.ibb.co/v68GGZf2/by-the-lake.png"
+          alt="by the lake"
+        />
+
+        <div class="card">
+          <h2 class="poem-title">The Sense of Life</h2>
+          <p class="poem-body">
+Before you
+life was scattered into fragments
+days broken like shards of glass
+I tried to gather them
+but they cut my hands
+and the picture never appeared
+With you beside me
+the fragments glow as one
+the pieces arrange themselves into wholeness
+the broken glass becomes a window
+through which the light pours clear
+Even the smallest hours
+a meal shared
+a walk in the quiet of evening
+become light
+They are no longer fragments
+but living notes in a song
+that was always waiting to be sung
+Now I know why the world exists
+why every breath feels alive
+why time flows forward
+Because you are here
+Because you are with me
+Because the emptiness is gone
+and life at last makes sense
           </p>
         </div>
       </section>
 
-      <!-- SECTION 2 -->
-      <section class="block">
-        <img class="photo" src="images/photo2.jpg" alt="Another warm memory" />
+      <!-- SECTION 3: The Waiting -->
+      <section class="block" id="the-waiting">
+        <div class="embed-wrap">
+          <iframe
+            allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write"
+            frameborder="0"
+            height="175"
+            style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;"
+            sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
+            src="https://embed.music.apple.com/us/song/alma-enamorada-feat-los-amables-del-norte/1495472876"
+          ></iframe>
+        </div>
 
-        <div class="text">
-          <h2>Stay a little longer</h2>
-          <p>
-            If time is a thief, I want to bribe it.
-            If life is a hallway of closing doors,
-            I want to hold yours open with both hands.
+        <img
+          class="photo"
+          src="https://i.ibb.co/4gwp0yXg/068f1059-9d58-47a8-a22f-02b456b87235.png"
+          alt="068f1059-9d58-47a8-a22f-02b456b87235"
+        />
+
+        <div class="card">
+          <h2 class="poem-title">The Waiting</h2>
+          <p class="poem-body">
+I waited for you
+through years that felt unending
+through nights stretched thin with silence
+through hunger and restless longing
+But waiting is not emptiness
+It is the soil beneath the tree
+the gathering of strength in roots
+before branches ever appear
+And when you came
+you were the rain
+you were the sun
+you were the season that kept its promise
+The years I thought wasted
+are now folded into our strength
+Every ache was shaping me
+so I would not mistake you when you arrived
+Every hour of longing
+was preparing me for recognition
+so I could say at once
+This is the soul I was waiting for
+I see now
+my whole life was the seed
+and you are the bloom
           </p>
         </div>
       </section>
 
-      <footer class="footer">
-        <p>Made with quiet devotion.</p>
-      </footer>
+      <!-- SECTION 4: The Atchafalaya Bridge -->
+      <section class="block" id="atchafalaya-bridge">
+        <div class="embed-wrap">
+          <iframe
+            allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write"
+            frameborder="0"
+            height="175"
+            style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;"
+            sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
+            src="https://embed.music.apple.com/us/song/between-the-bars/313302072"
+          ></iframe>
+        </div>
+
+        <img
+          class="photo"
+          src="https://i.ibb.co/F4zrDFJs/45557f05-7b8a-4b4e-a21d-a951de4a2720.png"
+          alt="45557f05-7b8a-4b4e-a21d-a951de4a2720"
+        />
+
+        <div class="card">
+          <h2 class="poem-title">The Atchafalaya Bridge</h2>
+          <p class="poem-body">
+There is a bridge that frightens me
+the Atchafalaya stretching across the waters
+its endless rise and fall
+its length beyond sight
+When you cross it
+my heart trembles
+as if the whole world could conspire
+to steal you away from me
+But the only bridge I long for you to walk
+is not of concrete or steel
+It is the bridge of our own making
+built from our promises
+
+set firm with laughter
+strengthened with the weight of trust
+It arches over time itself
+and leads not to danger
+but to the life we will share
+Each mile of it
+is laid with the steps we have taken together
+each span bright with the vision of our tomorrows
+When we cross it hand in hand
+there is no fear
+for it rises not above peril
+but above all that tried to hold us back
+The Atchafalaya may stretch across waters
+but our bridge stretches into forever
+          </p>
+        </div>
+      </section>
+
+      <!-- SECTION 5: Shh (or This Dance) -->
+      <section class="block" id="shh-this-dance">
+        <div class="embed-wrap">
+          <iframe
+            allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write"
+            frameborder="0"
+            height="175"
+            style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;"
+            sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
+            src="https://embed.music.apple.com/us/song/jealous/1601489381"
+          ></iframe>
+        </div>
+
+        <img
+          class="photo"
+          src="https://i.ibb.co/yBBKCK0M/d58e2bb6-d1be-439c-9b24-05ea85c2ef3d.png"
+          alt="d58e2bb6-d1be-439c-9b24-05ea85c2ef3d"
+        />
+
+        <div class="card">
+          <h2 class="poem-title">Shh (or This Dance)</h2>
+          <p class="poem-body">
+Though you are far
+I feel you me or
+You inside
+My fears
+
+You’re in every thought
+Even when not
+there
+Even when im too afraid
+To think
+To even dare
+Say
+
+“I miss you”
+And i’m always afraid
+That fate
+Or the world
+Or maybe another
+may
+Will
+Won’t
+Can
+take you from me
+Away
+
+I play a strong man
+A lot
+I play alot
+A clever word
+A strong card
+dealt
+But with you I
+
+fold
+Whatever
+Whenever
+
+I know im wrong
+I know my love
+I’m love
+I’m in
+I love you
+          </p>
+        </div>
+      </section>
+
+      <!-- SECTION 6: I Keep You -->
+      <section class="block" id="i-keep-you">
+        <div class="embed-wrap">
+          <iframe
+            allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write"
+            frameborder="0"
+            height="175"
+            style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;"
+            sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
+            src="https://embed.music.apple.com/us/song/the-zephyr-song/945578426"
+          ></iframe>
+        </div>
+
+        <!-- You left section 6 image blank, so I used the fairy-in-a-jar image you uploaded.
+             If you want it hosted on i.ibb.co too, swap the src for that URL later. -->
+        <img
+          class="photo"
+          src="72d1b661-2ccc-45e3-9a5e-03ff10bf8ae3.png"
+          alt="fairy in a jar"
+        />
+
+        <div class="card">
+          <h2 class="poem-title">I Keep You</h2>
+          <p class="poem-body">
+I keep you
+ in places nobody can steal
+from me
+Not in photos
+ not in messages
+ not in things that can be
+gone
+ or lost
+I keep you
+ in the way my chest warms
+ when I remember your voice
+
+ in the way my hands relax
+ when I think of you
+I keep you
+ in the soft parts of my mind
+In the hardest
+My thought
+My love
+
+ where I don’t let the world in
+ the parts that still believe
+ in sweetness
+In the parts that learned to hope
+To believe
+In love
+Sometimes I think back
+To our happiest moments
+A laugh
+A bear
+A tiger
+A mall
+A bumpy ride
+A ride almost gone
+The bridge always the bridge,
+Im at the end of the world
+With you
+
+ like a song
+ just one moment
+ over and over
+ until it becomes a world,
+the world
+Ours
+Yours
+Mine
+I need you
+even if time is cruel
+ even if fate acts like a thief
+ there is one thing
+ I wont let it touch
+What we shared
+What we told
+Each other
+In a Dream
+
+ and I loved you
+And i love you
+ and you changed me
+          </p>
+        </div>
+      </section>
+
+      <!-- SECTION 7: The Screams of Night -->
+      <section class="block" id="screams-of-night">
+        <div class="embed-wrap">
+          <iframe
+            allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write"
+            frameborder="0"
+            height="175"
+            style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;"
+            sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
+            src="https://embed.music.apple.com/us/song/bad-dreams/1765799904"
+          ></iframe>
+        </div>
+
+        <img
+          class="photo"
+          src="https://i.ibb.co/20vsWVTB/66388e8d-0ce6-46f7-a2b8-09d4f8b47572.png"
+          alt="66388e8d-0ce6-46f7-a2b8-09d4f8b47572"
+        />
+
+        <div class="card">
+          <h2 class="poem-title">The Screams of Night</h2>
+          <p class="poem-body">
+When night arrives
+and the room grows wide with silence
+I wake in terror
+my chest rises like a storm tide
+my voice breaks open
+and the air feels sharp against me
+But when you are here
+everything changes
+You are the stillness that lets me breathe
+the rhythm that steadies my pulse
+Your nearness is the hush of a meadow
+after the rain has passed
+the soft weight of dew on grass
+the glow of the moon through calm clouds
+Sleep is no longer a plunge into darkness
+It is a shoreline where your hand anchors mine
+a tide I can trust
+a gentle current carrying me inward
+You are the guardian of my dreams
+the safety of my sleep
+And when I close my eyes beside you
+I fall not into fear
+but into a vast and shining quiet
+that knows your name
+          </p>
+        </div>
+      </section>
+
+      <!-- FINAL BOTTOM SECTION (closing song + image + footer lines) -->
+      <section class="closing" id="closing">
+        <div class="embed-wrap center">
+          <iframe
+            allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write"
+            frameborder="0"
+            height="175"
+            style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;"
+            sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
+            src="https://embed.music.apple.com/us/song/die-with-a-smile/1762656732"
+          ></iframe>
+        </div>
+
+        <img
+          class="photo closing-photo"
+          src="https://i.ibb.co/4wh2qTqH/image-3.jpg"
+          alt="image (3)"
+        />
+
+        <footer class="footer">
+          <p class="footer-line">made with endless longing...</p>
+          <p class="footer-line2">I Love You My Quandranea</p>
+        </footer>
+      </section>
     </main>
   </body>
 </html>
