--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </header>
 
     <main class="page">
-      <!-- SECTION 2: The Sense of Life -->
+      <!-- SECTION 1: The Sense of Life -->
       <section class="block" id="sense-of-life">
-        <div class="embed-wrap">
+        <div class="embed-wrap center">
           <iframe
             allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write"
             frameborder="0"
@@ -39,11 +39,7 @@
           ></iframe>
         </div>
 
-        <img
-          class="photo"
-          src="https://i.ibb.co/v68GGZf2/by-the-lake.png"
-          alt="by the lake"
-        />
+        <img class="photo" src="https://i.ibb.co/v68GGZf2/by-the-lake.png" alt="by the lake" />
 
         <div class="card">
           <h2 class="poem-title">The Sense of Life</h2>
@@ -77,9 +73,9 @@ and life at last makes sense
         </div>
       </section>
 
-      <!-- SECTION 3: The Waiting -->
+      <!-- SECTION 2: The Waiting -->
       <section class="block" id="the-waiting">
-        <div class="embed-wrap">
+        <div class="embed-wrap center">
           <iframe
             allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write"
             frameborder="0"
@@ -126,9 +122,9 @@ and you are the bloom
         </div>
       </section>
 
-      <!-- SECTION 4: The Atchafalaya Bridge -->
+      <!-- SECTION 3: The Atchafalaya Bridge -->
       <section class="block" id="atchafalaya-bridge">
-        <div class="embed-wrap">
+        <div class="embed-wrap center">
           <iframe
             allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write"
             frameborder="0"
@@ -179,9 +175,9 @@ but our bridge stretches into forever
         </div>
       </section>
 
-      <!-- SECTION 5: Shh (or This Dance) -->
+      <!-- SECTION 4: Shh (or This Dance) -->
       <section class="block" id="shh-this-dance">
-        <div class="embed-wrap">
+        <div class="embed-wrap center">
           <iframe
             allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write"
             frameborder="0"
@@ -247,9 +243,9 @@ I love you
         </div>
       </section>
 
-      <!-- SECTION 6: I Keep You -->
+      <!-- SECTION 5: I Keep You (fairy section) -->
       <section class="block" id="i-keep-you">
-        <div class="embed-wrap">
+        <div class="embed-wrap center">
           <iframe
             allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write"
             frameborder="0"
@@ -260,13 +256,7 @@ I love you
           ></iframe>
         </div>
 
-        <!-- You left section 6 image blank, so I used the fairy-in-a-jar image you uploaded.
-             If you want it hosted on i.ibb.co too, swap the src for that URL later. -->
-        <img
-          class="photo"
-          src="72d1b661-2ccc-45e3-9a5e-03ff10bf8ae3.png"
-          alt="fairy in a jar"
-        />
+        <img class="photo" src="https://i.ibb.co/NQBf5QH/zdfdfz.jpg" alt="zdfdfz" />
 
         <div class="card">
           <h2 class="poem-title">I Keep You</h2>
@@ -334,9 +324,9 @@ And i love you
         </div>
       </section>
 
-      <!-- SECTION 7: The Screams of Night -->
+      <!-- SECTION 6: The Screams of Night -->
       <section class="block" id="screams-of-night">
-        <div class="embed-wrap">
+        <div class="embed-wrap center">
           <iframe
             allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write"
             frameborder="0"
@@ -384,7 +374,7 @@ that knows your name
         </div>
       </section>
 
-      <!-- FINAL BOTTOM SECTION (closing song + image + footer lines) -->
+      <!-- CLOSING: song + footer text (no final image) -->
       <section class="closing" id="closing">
         <div class="embed-wrap center">
           <iframe
@@ -396,12 +386,6 @@ that knows your name
             src="https://embed.music.apple.com/us/song/die-with-a-smile/1762656732"
           ></iframe>
         </div>
-
-        <img
-          class="photo closing-photo"
-          src="https://i.ibb.co/4wh2qTqH/image-3.jpg"
-          alt="image (3)"
-        />
 
         <footer class="footer">
           <p class="footer-line">made with endless longing...</p>
