--- a/our-game.html
+++ b/our-game.html
@@ -28,7 +28,7 @@
   const canvas = document.getElementById("c");
   const ctx = canvas.getContext("2d");
 
-  // Assets (must be in same folder as this HTML, or update paths)
+  // Assets (keep in same folder as this HTML, or update paths)
   const bg = new Image(); bg.src = "background.png";
   const ch = new Image(); ch.src = "character.png";
 
@@ -49,52 +49,55 @@
     canvas.width = w * DPR;
     canvas.height = h * DPR;
 
-    // Draw in CSS pixel coordinates (not device pixels)
+    // draw in CSS pixel coordinates
     ctx.setTransform(DPR, 0, 0, DPR, 0, 0);
     ctx.imageSmoothingEnabled = false;
   }
   addEventListener("resize", resize);
   resize();
 
-  // Street lane bounds (scale with screen)
-  // Top is a ratio; bottom is the actual bottom edge (so the chibi can touch the bottom).
-  const streetTopRatio = 0.56; // tweak if your street starts higher/lower
-  const bottomPad = 0;         // set to 1-4 if you ever see clipping
+  // Street lane bounds
+  const streetTopRatio = 0.76; // tweak if your street starts higher/lower
+  const bottomPad = 0;         // set 1-4 if you see bottom clipping
   const streetTop = () => innerHeight * streetTopRatio;
   const streetBottom = () => innerHeight - bottomPad;
 
-  // Camera scrolling OFF (kept for compatibility)
-  const mapScrollMax = 0;
-  let camX = 0;
+  // Background scaling: STRETCH to touch all 4 corners
+  function drawBgStretch(){
+    const cw = innerWidth, chh = innerHeight;
+    if (bg.complete && bg.naturalWidth) {
+      ctx.drawImage(bg, 0, 0, cw, chh);
+    } else {
+      ctx.fillStyle = "#0b1020";
+      ctx.fillRect(0,0,cw,chh);
+      ctx.fillStyle = "rgba(255,255,255,0.2)";
+      ctx.fillText("Loading background.png...", 24, 36);
+    }
+  }
 
+  // Player
   const player = {
     x: 280,
     y: 440,
-    baseW: 56,
-    baseH: 56,
+    baseW: 112,  // 2x bigger
+    baseH: 112,  // 2x bigger
     speed: 240
   };
 
+  // Optional camera scrolling (off)
+  const mapScrollMax = 0;
+  let camX = 0;
+
   const clamp = (v, a, b) => Math.max(a, Math.min(b, v));
 
+  // Mild depth effect so he doesn't shrink a ton when moving upward
+  const spriteScale = 1.0; // keep 1.0 since baseW/baseH already doubled
   function depthScale(y){
     const top = streetTop();
     const bot = streetBottom();
     const t = (y - top) / (bot - top); // 0..1
-    return 0.70 + t * 0.55; // far -> near
-  }
-
-  function drawBgStretchToCorners(){
-    const cw = innerWidth, chh = innerHeight;
-    if (bg.complete && bg.naturalWidth) {
-      // STRETCH to touch all 4 corners (no bars, no cropping; aspect may distort)
-      ctx.drawImage(bg, 0, 0, cw, chh);
-    } else {
-      ctx.fillStyle = "#0b1020";
-      ctx.fillRect(0, 0, cw, chh);
-      ctx.fillStyle = "rgba(255,255,255,0.2)";
-      ctx.fillText("Loading background.png...", 24, 36);
-    }
+    const depth = 0.95 + t * 0.15;     // far 0.95 -> near 1.10 (small change)
+    return depth * spriteScale;
   }
 
   let last = performance.now();
@@ -124,20 +127,23 @@
     player.x += vx * sp * dt;
     player.y += vy * sp * dt;
 
-    // Lock to street lane, but allow feet to reach the bottom edge
+    // Lock to street lane; allow feet to reach the bottom edge
     player.y = clamp(player.y, top, bot);
 
-    // Subtle depth speed feeling (optional vibe)
+    // Subtle depth speed feeling (optional)
     player.x += vx * (sp * 0.15) * (1 - (player.y - top) / (bot - top)) * dt;
 
-    // Horizontal bounds (not important since camX is off)
+    // Keep x sane
     player.x = clamp(player.x, 0, 999999);
 
-    camX = (mapScrollMax > 0) ? clamp(player.x - innerWidth * 0.45, 0, mapScrollMax) : 0;
+    // Camera follow (off by default)
+    camX = (mapScrollMax > 0)
+      ? clamp(player.x - innerWidth * 0.45, 0, mapScrollMax)
+      : 0;
 
     // Draw
-    ctx.clearRect(0, 0, innerWidth, innerHeight);
-    drawBgStretchToCorners();
+    ctx.clearRect(0,0,innerWidth,innerHeight);
+    drawBgStretch();
 
     const s = depthScale(player.y);
     const w = player.baseW * s;
@@ -147,7 +153,7 @@
     const px = Math.floor(player.x - camX);
     const py = Math.floor(player.y - h);
 
-    // shadow (kept slightly above exact bottom so it doesn't look cut)
+    // shadow
     ctx.fillStyle = "rgba(0,0,0,0.35)";
     ctx.beginPath();
     ctx.ellipse(px + w/2, player.y - 6, w*0.32, h*0.10, 0, 0, Math.PI*2);
