--- a/cosas.html
+++ b/cosas.html
@@ -1,217 +1,207 @@
-name: TEST publish cosas.html then auto-revert to placeholder
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Cosas</title>
+  <meta name="description" content="Cosas is sealed for now. Check back later." />
+  <meta name="robots" content="noindex,nofollow" />
 
-on:
-  workflow_dispatch:
-    inputs:
-      minutes_live:
-        description: "How many minutes to keep the secret page live before reverting"
-        required: true
-        default: "3"
+  <style>
+    :root{
+      --bg:#070a12;
+      --text:#e9efff;
+      --muted:#a4b3d4;
+      --border:rgba(255,255,255,.12);
+      --card:rgba(14,20,38,.78);
+      --glow:rgba(255, 160, 200, .14);
+      --glow2:rgba(120, 190, 255, .12);
+      --ok:#7CFFB2;
+      --warn:#FFD27C;
+    }
 
-permissions:
-  contents: write
+    * { box-sizing: border-box; }
+    html, body { height: 100%; }
 
-jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout main
-        uses: actions/checkout@v4
-        with:
-          ref: main
+    body{
+      margin:0;
+      min-height:100vh;
+      display:grid;
+      place-items:center;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      color:var(--text);
+      background:
+        radial-gradient(900px 520px at 18% -10%, #2a3f86 0%, transparent 55%),
+        radial-gradient(780px 480px at 92% 0%, #6b1c52 0%, transparent 55%),
+        radial-gradient(540px 340px at 45% 120%, #0b6b58 0%, transparent 55%),
+        var(--bg);
+      padding: 28px 14px;
+    }
 
-      - name: Publish from secret into cosas.html
-        env:
-          COSAS_HTML: ${{ secrets.COSAS_HTML }}
-        run: |
-          if [ -z "$COSAS_HTML" ]; then
-            echo "ERROR: COSAS_HTML secret is empty/missing."
-            exit 1
-          fi
-          printf "%s" "$COSAS_HTML" > cosas.html
+    main{
+      width:min(820px, 94vw);
+      border:1px solid var(--border);
+      background:var(--card);
+      border-radius:24px;
+      padding:28px 24px;
+      box-shadow:
+        0 22px 70px rgba(0,0,0,.62),
+        0 0 120px var(--glow),
+        0 0 140px var(--glow2);
+      backdrop-filter: blur(9px);
+    }
 
-      - name: Commit and push (publish)
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add cosas.html
-          git commit -m "TEST: publish cosas.html" || echo "No changes"
-          git push origin main
+    .top{
+      display:flex;
+      align-items:center;
+      gap:14px;
+      margin-bottom:12px;
+    }
 
-      - name: Keep it live
-        run: |
-          MINS="${{ github.event.inputs.minutes_live }}"
-          echo "Sleeping for $MINS minutes..."
-          sleep $((MINS * 60))
+    .badge{
+      width:52px;
+      height:52px;
+      border-radius:16px;
+      display:grid;
+      place-items:center;
+      border:1px solid var(--border);
+      background:rgba(255,255,255,.07);
+      font-size:22px;
+      user-select:none;
+    }
 
-      - name: Revert to placeholder
-        run: |
-          cat > cosas.html <<'HTML'
-          <!doctype html>
-          <html lang="en">
-          <head>
-            <meta charset="utf-8" />
-            <meta name="viewport" content="width=device-width, initial-scale=1" />
-            <title>Cosas</title>
-            <style>
-              :root{
-                --bg:#070a12;
-                --text:#e9efff;
-                --muted:#a4b3d4;
-                --border:rgba(255,255,255,.12);
-                --card:rgba(14,20,38,.78);
-                --glow:rgba(255, 160, 200, .14);
-                --glow2:rgba(120, 190, 255, .12);
-              }
-              body{
-                margin:0;
-                min-height:100vh;
-                display:grid;
-                place-items:center;
-                font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-                color:var(--text);
-                background:
-                  radial-gradient(900px 520px at 18% -10%, #2a3f86 0%, transparent 55%),
-                  radial-gradient(780px 480px at 92% 0%, #6b1c52 0%, transparent 55%),
-                  radial-gradient(540px 340px at 45% 120%, #0b6b58 0%, transparent 55%),
-                  var(--bg);
-              }
-              .card{
-                width:min(780px, 92vw);
-                border:1px solid var(--border);
-                background:var(--card);
-                border-radius:24px;
-                padding:26px 22px;
-                box-shadow:
-                  0 22px 70px rgba(0,0,0,.62),
-                  0 0 120px var(--glow),
-                  0 0 140px var(--glow2);
-                backdrop-filter: blur(9px);
-              }
-              .top{
-                display:flex;
-                align-items:center;
-                gap:14px;
-                margin-bottom:12px;
-              }
-              .badge{
-                width:50px;
-                height:50px;
-                border-radius:16px;
-                display:grid;
-                place-items:center;
-                border:1px solid var(--border);
-                background:rgba(255,255,255,.07);
-                font-size:22px;
-                user-select:none;
-              }
-              h1{
-                margin:0;
-                font-size:22px;
-                letter-spacing:.2px;
-                line-height:1.1;
-              }
-              .sub{
-                margin-top:4px;
-                color:rgba(233,239,255,.88);
-                font-size:12px;
-                opacity:.9;
-              }
-              p{
-                margin:10px 0 0;
-                color:var(--muted);
-                line-height:1.6;
-                font-size:14px;
-              }
-              .pillrow{
-                display:flex;
-                gap:10px;
-                flex-wrap:wrap;
-                margin-top:16px;
-              }
-              .pill{
-                font-size:12px;
-                color:rgba(233,240,255,.92);
-                border:1px solid var(--border);
-                background:rgba(255,255,255,.07);
-                padding:8px 10px;
-                border-radius:999px;
-                user-select:none;
-              }
-              .footer{
-                margin-top:18px;
-                padding-top:14px;
-                border-top:1px solid rgba(255,255,255,.08);
-                display:flex;
-                flex-wrap:wrap;
-                gap:10px;
-                justify-content:space-between;
-                align-items:center;
-              }
-              a{
-                color:var(--text);
-                text-decoration:none;
-                border-bottom:1px dotted rgba(255,255,255,.25);
-              }
-              code{
-                font-family:ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
-                font-size:12px;
-                color:#cfe1ff;
-              }
-              .tiny{
-                font-size:12px;
-                opacity:.85;
-                color:rgba(164,179,212,.95);
-              }
-              .wink{
-                color:rgba(233,239,255,.95);
-              }
-            </style>
-          </head>
-          <body>
-            <main class="card">
-              <div class="top">
-                <div class="badge">🕯️</div>
-                <div>
-                  <h1>Cosas</h1>
-                  <div class="sub"><code>cosas.html</code></div>
-                </div>
-              </div>
+    h1{
+      margin:0;
+      font-size:22px;
+      letter-spacing:.2px;
+      line-height:1.1;
+    }
 
-              <p class="wink">
-                🚧 Not live yet.
-                <br>
-                The contents of this page are on a timer… and I’m still here.
-              </p>
+    .sub{
+      margin-top:4px;
+      color:rgba(233,239,255,.88);
+      font-size:12px;
+      opacity:.9;
+    }
 
-              <p>
-                This is a scheduled release page. Until the day it opens, it stays shut.
-                If you were hoping for the reveal early: nice try 😌
-              </p>
+    p{
+      margin:12px 0 0;
+      color:var(--muted);
+      line-height:1.65;
+      font-size:14px;
+    }
 
-              <div class="pillrow">
-                <span class="pill">✅ Not dead yet</span>
-                <span class="pill">⏳ Dead-man switch armed</span>
-                <span class="pill">🔒 Content sealed</span>
-                <span class="pill">⚙️ GitHub Actions</span>
-              </div>
+    .lead{
+      margin-top:10px;
+      color:rgba(233,239,255,.94);
+    }
 
-              <p class="tiny" style="margin-top:14px;">
-                If you’re seeing this, it means the “boom” condition hasn’t been met.
-                Come back later. Or don’t. Fate is flexible.
-              </p>
+    .pillrow{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      margin-top:18px;
+    }
 
-              <div class="footer">
-                <div class="tiny">Home: <a href="./index.html">index.html</a></div>
-                <div class="tiny">Status: <span class="wink">alive</span> ✅</div>
-              </div>
-            </main>
-          </body>
-          </html>
-          HTML
+    .pill{
+      font-size:12px;
+      color:rgba(233,240,255,.92);
+      border:1px solid var(--border);
+      background:rgba(255,255,255,.07);
+      padding:8px 10px;
+      border-radius:999px;
+      user-select:none;
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+    }
 
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add cosas.html
-          git commit -m "TEST: revert cosas.html to placeholder" || echo "No changes"
-          git push origin main
+    .dot{
+      width:8px;
+      height:8px;
+      border-radius:999px;
+      background:rgba(255,255,255,.35);
+      box-shadow: 0 0 0 2px rgba(255,255,255,.07);
+    }
+    .dot.ok{ background: var(--ok); }
+    .dot.warn{ background: var(--warn); }
+
+    .footer{
+      margin-top:20px;
+      padding-top:14px;
+      border-top:1px solid rgba(255,255,255,.08);
+      display:flex;
+      flex-wrap:wrap;
+      gap:10px;
+      justify-content:space-between;
+      align-items:center;
+    }
+
+    a{
+      color:var(--text);
+      text-decoration:none;
+      border-bottom:1px dotted rgba(255,255,255,.25);
+    }
+    a:hover{ border-bottom-color: rgba(255,255,255,.6); }
+
+    code{
+      font-family:ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
+      font-size:12px;
+      color:#cfe1ff;
+    }
+
+    .tiny{
+      font-size:12px;
+      opacity:.88;
+      color:rgba(164,179,212,.95);
+    }
+
+    /* Nice accessibility focus ring */
+    a:focus-visible{
+      outline: 2px solid rgba(233,239,255,.6);
+      outline-offset: 4px;
+      border-bottom-color: transparent;
+      border-radius: 6px;
+    }
+  </style>
+</head>
+
+<body>
+  <main>
+    <div class="top">
+      <div class="badge" aria-hidden="true">🕯️</div>
+      <div>
+        <h1>Cosas</h1>
+        <div class="sub"><code>cosas.html</code> • placeholder</div>
+      </div>
+    </div>
+
+    <p class="lead">
+      This page is sealed for now.
+      If you were hoping for the reveal early: nice try 😌
+    </p>
+
+    <p>
+      Sometimes a page goes live on a timer and then snaps back to this placeholder.
+      If you’re seeing this version, the “open” condition hasn’t been met (or it already re-locked).
+    </p>
+
+    <div class="pillrow" role="list" aria-label="Status badges">
+      <span class="pill" role="listitem"><span class="dot ok" aria-hidden="true"></span> Placeholder active</span>
+      <span class="pill" role="listitem"><span class="dot warn" aria-hidden="true"></span> Timed publish system</span>
+      <span class="pill" role="listitem"><span class="dot" aria-hidden="true"></span> Content sealed</span>
+      <span class="pill" role="listitem"><span class="dot" aria-hidden="true"></span> GitHub Pages friendly</span>
+    </div>
+
+    <p class="tiny" style="margin-top:14px;">
+      Tip: If you want this page to be indexable by search engines later, remove
+      <code>&lt;meta name="robots" content="noindex,nofollow"&gt;</code>.
+    </p>
+
+    <div class="footer">
+      <div class="tiny">Home: <a href="./index.html">index.html</a></div>
+      <div class="tiny">Status: <span style="color:rgba(233,239,255,.95)">alive</span> ✅</div>
+    </div>
+  </main>
+</body>
+</html>
